Polish dashboard and introduce highlights
* link activities to highlight-data (e.g. fastest ride)
* allow to jump "Back to Dashboard" with selected filters
* modernize general dashboard UI (responsive)
* allow filtering for weeks/months/year/all activities
* navigate back and forth in time (if data exists)
* aggregate routesInYearChart for All routes per month
* introduce icons (also at activity details page)
